--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -16,8 +16,19 @@
             <img src="../media/content/headerImg.svg" alt="">
         </div>
         <div class='button1'>
-			<button class="startBtn" id="disconnect" style="display:none"></button>
+			<button class="startBtn" id="disconnect" style="display:none">
+			</button>
         </div>
+	</div>
+	<div class="content">
+		<div ><img class="content_img" src="../media/content/chap1.svg" alt=""></div>
+		<div class="content__column" >
+			<img class="content_logo" src="../media/content/game.svg" alt="">
+			<button id="btn_modal_window">New game
+				<img src="../media/content/sword.svg" alt="">
+			</button>
+		</div>
+		<div ><img class="content_img" src="../media/content/chap.svg" alt=""></div>
 	</div>
 	<div id="start" >
 		<div class="Switch">
@@ -39,7 +50,6 @@
 			<button class="startBtn" id="deposit" style="display:none">Deposit</button>
 			<p id="feeInfo" style="display:none">...</p>
 			<span id="startInternalBalance" style="display:none">Your in-game TON balance:</span>
-			<button id="btn_modal_window">New game</button>
 			<div id="my_modal" class="modal">
 				<div class="modal_content">
 					<span class="close_modal_window">×</span>
