--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -34,19 +34,8 @@
 	<div id="start" >
 		<div class="Switch">
 			<div class="Switch-title">
-				<p  onclick="sw(1)" id="Sw1"><h2>Open Games</h2>
-					<h4 id="opengames-empty">Empty or only your game</h4>
-					<div id="opengames">
-						<ul id="opengames-list">
-	</ul> </p>
-				<p  onclick="sw(2)" id="Sw2"> <details>
-					<summary><h2>Past Games</h2></summary>
-					<h4 id="pastgames-empty">Empty</h4>
-					<div id="pastgames">
-						<ul id="pastgames-list">
-						</ul>
-					</div>
-				</details> </p> </div>
+				<p  onclick="sw(1)" id="Sw1"><h2>Open Games</h2>	
+				<p  onclick="sw(2)" id="Sw2"><h2>Past Games</h2> 
 		</div>
 			
 		
