--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>TON Game</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/game.css">
+    <link rel="stylesheet" href="../styles/index.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
 	<script src="https://cdn.ethers.io/lib/ethers-5.6.umd.min.js" type="text/javascript">
 	</script>
@@ -32,13 +32,8 @@
 		<div ><img class="content_img" src="../media/content/chap.svg" alt=""></div>
 	</div>
 	<div id="start" >
-		<div class="Switch">
-			<div class="Switch-title">
-				<p  onclick="sw(1)" id="Sw1"><h2>Open Games</h2>	
-				<p  onclick="sw(2)" id="Sw2"><h2>Past Games</h2> 
-		</div>
+
 			
-		
 		<div class="startContainer">
 			<h1 id="walletHeader" style="display:none">Please connect wallet</h1>
 			<button class="startBtn" id="connect" style="display:none">Connect Wallet</button>
