--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -49,8 +49,8 @@
 			<div id="my_modal" class="modal">
 				<div class="modal_content">
 					<span class="close_modal_window">×</span>
-					<div>Map (coming soon) <input placeholder="Steel plant" disabled="true"/></div>
-					<div>Number of players (coming soon) <input placeholder="2 players" disabled="true"/></div>
+					<div class="input_S">Map (coming soon) <input placeholder="Steel plant" disabled="true"/></div>
+					<div class="input_S">Number of players (coming soon) <input placeholder="2 players" disabled="true"/></div>
 					<div id="amountPerDeathText" style="display: none;">Bet per round <input id="amountPerDeath" placeholder="ROSE" required/></div>
 					<div id="amountToPlayText" style="display: none;">Number of rounds <input type="number" id="amountToPlay" min="1" max="10" required/></div>
 					<div>Total prize pool: <span id="totalPrizePool">None</span></div>
